--- a/files/assets/css/src/general.scss
+++ b/files/assets/css/src/general.scss
@@ -3,6 +3,7 @@
 
 //@import "ov-import";
 //@import "ov-import-respo";
+@import "components";
 @import 'header';
 @import 'footer';
 @import 'main';
